Bug 1063265 - Stop Blinking the Text Caret when it isn't visible. r=roc, a=bajaj